// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FeedItem Snapshot Test should match snapshot when liked 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "margin": 4,
      "opacity": 1,
    }
  }
>
  <View
    accessibilityLabel="https://picsum.photos/id/123/200/200"
    contentFit="cover"
    style={
      {
        "borderRadius": 8,
        "height": 200,
        "width": 200,
      }
    }
    testID="expo-image"
  />
  <View
    style={
      [
        {
          "bottom": 8,
          "position": "absolute",
          "right": 8,
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
    testID="heart-animation"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <Text
        testID="icon-heart"
      >
        Icon:heart
      </Text>
    </View>
  </View>
</View>
`;

exports[`FeedItem Snapshot Test should match snapshot when not liked 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "margin": 4,
      "opacity": 1,
    }
  }
>
  <View
    accessibilityLabel="https://picsum.photos/id/123/200/200"
    contentFit="cover"
    style={
      {
        "borderRadius": 8,
        "height": 200,
        "width": 200,
      }
    }
    testID="expo-image"
  />
  <View
    style={
      [
        {
          "bottom": 8,
          "position": "absolute",
          "right": 8,
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
    testID="heart-animation"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <Text
        testID="icon-heart-outline"
      >
        Icon:heart-outline
      </Text>
    </View>
  </View>
</View>
`;
